Interaction Browser: Added option to browse graph right away or select types

--- a/sources/AssemblyVisualizer/AssemblyVisualizer.csproj
+++ b/sources/AssemblyVisualizer/AssemblyVisualizer.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HAL\Helper.cs" />
+    <Compile Include="HAL\ILSpy\BrowseInteractionsAdvContextMenuEntry.cs" />
     <Compile Include="HAL\ILSpy\BrowseInteractionsContextMenuEntry.cs" />
     <Compile Include="HAL\ILSpy\ModelHelper.cs" />
     <Compile Include="HAL\Reflector\ModelHelper.cs" />
